# version-beta-hackathon

./: README.md  package-lock.json  package.json
AI_Based_Recommendation/: app.py
backend/: pyproject.toml
backend/app/: .env  main.py
backend/app/routes/: upload.py
backend/app/services/: extraction.py  fhir_mapper.py  ingestion.py  metadata_agent.py
contract/: interact.js
frontend/: .env.example  DATABASE_SETUP.md  DEBUG_OTP_VERIFICATION.md  DEMO_MODE.md  EMAILJS_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  IPFS_IMPLEMENTATION.md  IPFS_INTEGRATION.md  IPFS_TEST_GUIDE.md  PINATA_SETUP.md  README.md  SUPABASE_SETUP.md  TROUBLESHOOTING.md  next.config.js  package-lock.json  package.json
frontend/prisma/: schema.prisma
frontend/src/abi/: HealthDataRegistry.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/doctor-dashboard/: page.tsx
frontend/src/app/doctor-portal/: page.tsx
frontend/src/app/home/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/components/: AIAssistant.tsx  AuditTrail.tsx  ConsentCard.tsx  HealthRecordCard.tsx  TrustBadge.tsx  UploadButton.tsx  connect.tsx  doctor-registration.tsx  fhir-display.tsx  main-nav.tsx  onboarding.tsx  patient-profile.tsx
frontend/src/lib/: emailClient.ts  emailService.ts  siwe.ts
frontend/src/styles/: globals.css
frontend/src/utils/: contract.ts  user-ids.ts
smart-contracts/: hardhat.config.js  package-lock.json  package.json
smart-contracts/contracts/: MedicalRecords.sol
smart-contracts/scripts/: deploy.js  deployMedicalRecordsV2.js
(+17 files in other folders)
